@@ -94,7 +94,7 @@
                 <attribute name="protectionEnable"/>
                 <attribute name="inactiveRunMode"/>
                 <attribute name="activeRunMode"/>
-                <attribute name="tdi"/>
+                <attribute name="testDataIndex" method="tdi"/>
                 <attribute name="payloadSize"/>
                 <attribute name="badAsicMask"/>
                 <attribute name="asicMask"/>
@@ -113,7 +113,7 @@
                 <attribute name="inactiveRunMode"/>
                 <attribute name="activeRunMode"/>
                 <attribute name="runTriggerDelay"/>
-                <attribute name="tdi"/>
+                <attribute name="testDataIndex" method="tdi"/>
                 <attribute name="payloadSize"/>
                 <attribute name="badAsicMask"/>
                 <attribute name="asicMask"/>
@@ -126,20 +126,7 @@
 
         
         <h5schema name="ElementV1" version="0">
-            <dataset name="element">
-                <attribute name="virtual_channel"/>
-                <attribute name="lane"/>
-                <attribute name="tid"/>
-                <attribute name="acq_count"/>
-                <attribute name="op_code"/>
-                <attribute name="quad"/>
-                <attribute name="seq_count"/>
-                <attribute name="ticks"/>
-                <attribute name="fiducials"/>
-                <attribute name="frame_type"/>
-                <attribute name="sb_temp" rank="1"/>
-            </dataset>
-            <dataset name="data"/>
+            <tag name="external" value="psddl_hdf2psana/cspad2x2.h"/>
         </h5schema>
         
     </package>
