@@ -8,6 +8,7 @@
 #include "hdf5pp/VlenType.h"
 #include "hdf5pp/Utils.h"
 #include "PSEvt/DataProxy.h"
+#include "psddl_hdf2psana/cspad2x2.h"
 namespace psddl_hdf2psana {
 namespace CsPad2x2 {
 
@@ -408,7 +409,7 @@ hdf5pp::Type ns_ConfigV1_v0_dataset_config_stored_type()
   type.insert("protectionEnable", offsetof(DsType, protectionEnable), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("inactiveRunMode", offsetof(DsType, inactiveRunMode), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("activeRunMode", offsetof(DsType, activeRunMode), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("tdi", offsetof(DsType, tdi), hdf5pp::TypeTraits<uint32_t>::stored_type());
+  type.insert("testDataIndex", offsetof(DsType, testDataIndex), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("payloadSize", offsetof(DsType, payloadSize), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("badAsicMask", offsetof(DsType, badAsicMask), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("asicMask", offsetof(DsType, asicMask), hdf5pp::TypeTraits<uint32_t>::stored_type());
@@ -434,7 +435,7 @@ hdf5pp::Type ns_ConfigV1_v0_dataset_config_native_type()
   type.insert("protectionEnable", offsetof(DsType, protectionEnable), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("inactiveRunMode", offsetof(DsType, inactiveRunMode), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("activeRunMode", offsetof(DsType, activeRunMode), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("tdi", offsetof(DsType, tdi), hdf5pp::TypeTraits<uint32_t>::native_type());
+  type.insert("testDataIndex", offsetof(DsType, testDataIndex), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("payloadSize", offsetof(DsType, payloadSize), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("badAsicMask", offsetof(DsType, badAsicMask), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("asicMask", offsetof(DsType, asicMask), hdf5pp::TypeTraits<uint32_t>::native_type());
@@ -479,7 +480,7 @@ uint32_t ConfigV1_v0::activeRunMode() const {
 }
 uint32_t ConfigV1_v0::tdi() const {
   if (not m_ds_config) read_ds_config();
-  return uint32_t(m_ds_config->tdi);
+  return uint32_t(m_ds_config->testDataIndex);
 }
 uint32_t ConfigV1_v0::payloadSize() const {
   if (not m_ds_config) read_ds_config();
@@ -735,7 +736,7 @@ hdf5pp::Type ns_ConfigV2_v0_dataset_config_stored_type()
   type.insert("inactiveRunMode", offsetof(DsType, inactiveRunMode), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("activeRunMode", offsetof(DsType, activeRunMode), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("runTriggerDelay", offsetof(DsType, runTriggerDelay), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("tdi", offsetof(DsType, tdi), hdf5pp::TypeTraits<uint32_t>::stored_type());
+  type.insert("testDataIndex", offsetof(DsType, testDataIndex), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("payloadSize", offsetof(DsType, payloadSize), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("badAsicMask", offsetof(DsType, badAsicMask), hdf5pp::TypeTraits<uint32_t>::stored_type());
   type.insert("asicMask", offsetof(DsType, asicMask), hdf5pp::TypeTraits<uint32_t>::stored_type());
@@ -762,7 +763,7 @@ hdf5pp::Type ns_ConfigV2_v0_dataset_config_native_type()
   type.insert("inactiveRunMode", offsetof(DsType, inactiveRunMode), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("activeRunMode", offsetof(DsType, activeRunMode), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("runTriggerDelay", offsetof(DsType, runTriggerDelay), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("tdi", offsetof(DsType, tdi), hdf5pp::TypeTraits<uint32_t>::native_type());
+  type.insert("testDataIndex", offsetof(DsType, testDataIndex), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("payloadSize", offsetof(DsType, payloadSize), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("badAsicMask", offsetof(DsType, badAsicMask), hdf5pp::TypeTraits<uint32_t>::native_type());
   type.insert("asicMask", offsetof(DsType, asicMask), hdf5pp::TypeTraits<uint32_t>::native_type());
@@ -811,7 +812,7 @@ uint32_t ConfigV2_v0::runTriggerDelay() const {
 }
 uint32_t ConfigV2_v0::tdi() const {
   if (not m_ds_config) read_ds_config();
-  return uint32_t(m_ds_config->tdi);
+  return uint32_t(m_ds_config->testDataIndex);
 }
 uint32_t ConfigV2_v0::payloadSize() const {
   if (not m_ds_config) read_ds_config();
@@ -855,123 +856,6 @@ boost::shared_ptr<PSEvt::Proxy<Psana::CsPad2x2::ConfigV2> > make_ConfigV2(int ve
   default:
     return boost::make_shared<PSEvt::DataProxy<Psana::CsPad2x2::ConfigV2> >(boost::shared_ptr<Psana::CsPad2x2::ConfigV2>());
   }
-}
-
-hdf5pp::Type ns_ElementV1_v0_dataset_element_stored_type()
-{
-  typedef ns_ElementV1_v0::dataset_element DsType;
-  hdf5pp::CompoundType type = hdf5pp::CompoundType::compoundType<DsType>();
-  type.insert("virtual_channel", offsetof(DsType, virtual_channel), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("lane", offsetof(DsType, lane), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("tid", offsetof(DsType, tid), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("acq_count", offsetof(DsType, acq_count), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("op_code", offsetof(DsType, op_code), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("quad", offsetof(DsType, quad), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("seq_count", offsetof(DsType, seq_count), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("ticks", offsetof(DsType, ticks), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("fiducials", offsetof(DsType, fiducials), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  type.insert("frame_type", offsetof(DsType, frame_type), hdf5pp::TypeTraits<uint32_t>::stored_type());
-  hsize_t _array_type_sb_temp_shape[] = { 4 };
-  hdf5pp::ArrayType _array_type_sb_temp = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<uint16_t>::stored_type(), 1, _array_type_sb_temp_shape);
-  type.insert("sb_temp", offsetof(DsType, sb_temp), _array_type_sb_temp);
-  return type;
-}
-
-hdf5pp::Type ns_ElementV1_v0::dataset_element::stored_type()
-{
-  static hdf5pp::Type type = ns_ElementV1_v0_dataset_element_stored_type();
-  return type;
-}
-
-hdf5pp::Type ns_ElementV1_v0_dataset_element_native_type()
-{
-  typedef ns_ElementV1_v0::dataset_element DsType;
-  hdf5pp::CompoundType type = hdf5pp::CompoundType::compoundType<DsType>();
-  type.insert("virtual_channel", offsetof(DsType, virtual_channel), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("lane", offsetof(DsType, lane), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("tid", offsetof(DsType, tid), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("acq_count", offsetof(DsType, acq_count), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("op_code", offsetof(DsType, op_code), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("quad", offsetof(DsType, quad), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("seq_count", offsetof(DsType, seq_count), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("ticks", offsetof(DsType, ticks), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("fiducials", offsetof(DsType, fiducials), hdf5pp::TypeTraits<uint32_t>::native_type());
-  type.insert("frame_type", offsetof(DsType, frame_type), hdf5pp::TypeTraits<uint32_t>::native_type());
-  hsize_t _array_type_sb_temp_shape[] = { 4 };
-  hdf5pp::ArrayType _array_type_sb_temp = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<uint16_t>::native_type(), 1, _array_type_sb_temp_shape);
-  type.insert("sb_temp", offsetof(DsType, sb_temp), _array_type_sb_temp);
-  return type;
-}
-
-hdf5pp::Type ns_ElementV1_v0::dataset_element::native_type()
-{
-  static hdf5pp::Type type = ns_ElementV1_v0_dataset_element_native_type();
-  return type;
-}
-ns_ElementV1_v0::dataset_element::dataset_element()
-{
-}
-ns_ElementV1_v0::dataset_element::~dataset_element()
-{
-}
-uint32_t ElementV1_v0::virtual_channel() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->virtual_channel);
-}
-uint32_t ElementV1_v0::lane() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->lane);
-}
-uint32_t ElementV1_v0::tid() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->tid);
-}
-uint32_t ElementV1_v0::acq_count() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->acq_count);
-}
-uint32_t ElementV1_v0::op_code() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->op_code);
-}
-uint32_t ElementV1_v0::quad() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->quad);
-}
-uint32_t ElementV1_v0::seq_count() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->seq_count);
-}
-uint32_t ElementV1_v0::ticks() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->ticks);
-}
-uint32_t ElementV1_v0::fiducials() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->fiducials);
-}
-ndarray<const uint16_t, 1> ElementV1_v0::sb_temp() const {
-  if (not m_ds_element) read_ds_element();
-  boost::shared_ptr<uint16_t> ptr(m_ds_element, m_ds_element->sb_temp);
-  return make_ndarray(ptr, Nsbtemp);
-}
-uint32_t ElementV1_v0::frame_type() const {
-  if (not m_ds_element) read_ds_element();
-  return uint32_t(m_ds_element->frame_type);
-}
-ndarray<const int16_t, 3> ElementV1_v0::data() const {
-  if (m_ds_data.empty()) read_ds_data();
-  return m_ds_data;
-}
-float
-ElementV1_v0::common_mode(uint32_t section) const{ 
-return 0; 
-}
-void ElementV1_v0::read_ds_element() const {
-  m_ds_element = hdf5pp::Utils::readGroup<CsPad2x2::ns_ElementV1_v0::dataset_element>(m_group, "element", m_idx);
-}
-void ElementV1_v0::read_ds_data() const {
-  m_ds_data = hdf5pp::Utils::readNdarray<int16_t, 3>(m_group, "data", m_idx);
 }
 boost::shared_ptr<PSEvt::Proxy<Psana::CsPad2x2::ElementV1> > make_ElementV1(int version, hdf5pp::Group group, hsize_t idx) {
   switch (version) {
